--- a/SteamAppBranchSwitcher.Desktop/SteamAppBranchSwitcher.Desktop.csproj
+++ b/SteamAppBranchSwitcher.Desktop/SteamAppBranchSwitcher.Desktop.csproj
@@ -10,7 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.Desktop" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Avalonia" Version="11.2.5" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.2.5" />
+    <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
