--- a/SteamAppBranchSwitcher.Desktop/SteamAppBranchSwitcher.Desktop.csproj
+++ b/SteamAppBranchSwitcher.Desktop/SteamAppBranchSwitcher.Desktop.csproj
@@ -15,6 +15,19 @@
     <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
   </ItemGroup>
 
+<PropertyGroup>
+    <PublishAot>true</PublishAot>
+    <!-- Recommended Avalonia trimming settings for Native AOT -->
+    <BuiltInComInteropSupport>false</BuiltInComInteropSupport>
+    <TrimMode>link</TrimMode>
+</PropertyGroup>
+
+<ItemGroup>
+    <!-- Preserve Avalonia types for reflection -->
+    <!-- <TrimmerRootAssembly Include="Avalonia.Themes.Fluent" /> -->
+    <!-- <TrimmerRootAssembly Include="Avalonia.Themes.Default" /> -->
+</ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\SteamAppBranchSwitcher\SteamAppBranchSwitcher.csproj" />
   </ItemGroup>
