--- a/SteamAppBranchSwitcher/SteamAppBranchSwitcher.csproj
+++ b/SteamAppBranchSwitcher/SteamAppBranchSwitcher.csproj
@@ -21,6 +21,20 @@
     <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
   </ItemGroup>
 
+<PropertyGroup>
+    <PublishAot>true</PublishAot>
+    <!-- Recommended Avalonia trimming settings for Native AOT -->
+    <BuiltInComInteropSupport>false</BuiltInComInteropSupport>
+    <TrimMode>link</TrimMode>
+</PropertyGroup>
+
+<ItemGroup>
+    <!-- Preserve Avalonia types for reflection -->
+    <TrimmerRootAssembly Include="Avalonia.Themes.Fluent" />
+    <!-- <TrimmerRootAssembly Include="Avalonia.Themes.Default" /> -->
+    <TrimmerRootAssembly Include="Avalonia.ReactiveUI" />
+</ItemGroup>
+
   <ItemGroup>
     <Reference Include="Steamworks.NET">
       <HintPath>..\Steamworks.NET\Steamworks.NET.dll</HintPath>
