null check. why not?

--- a/SteamAppBranchSwitcher/SteamAppBranchSwitcher.csproj
+++ b/SteamAppBranchSwitcher/SteamAppBranchSwitcher.csproj
@@ -36,7 +36,7 @@
     <!-- Preserve Avalonia types for reflection -->
     <TrimmerRootAssembly Include="Avalonia.Themes.Fluent" />
     <!-- <TrimmerRootAssembly Include="Avalonia.Themes.Default" /> -->
-    <TrimmerRootAssembly Include="Avalonia.ReactiveUI" />
+    <!-- <TrimmerRootAssembly Include="Avalonia.ReactiveUI" /> -->
 </ItemGroup>
 
   <ItemGroup>
